--- a/package.json
+++ b/package.json
@@ -7,13 +7,26 @@
     "@sap/cds": "^9",
     "express": "^4"
   },
-  "devDependencies": {
-    "@cap-js/sqlite": "^2",
-    "@sap/cds-dk": "^9"
-  },
   "scripts": {
     "start": "cds-serve"
   },
   "private": true,
-  "cds": {}
+  "cds": {
+    "build": {
+      "tasks": [
+        {
+          "for": "hana",
+          "dest": "../db"
+        },
+        {
+          "for": "node-cf"
+        }
+      ]
+    },
+    "requires": {
+      "db": {
+        "kind": "hana-cloud"
+      }
+    }
+  }
 }
