--- a/mta.yaml
+++ b/mta.yaml
@@ -28,7 +28,7 @@ modules:
 
   - name: Fashon_Shop-db-deployer
     type: hdb
-    path: gen/db
+    path: db #gen/db
     parameters:
       buildpack: nodejs_buildpack
     requires:
